--- a/profile.html
+++ b/profile.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>PROFILE</title>
     <script src="https://kit.fontawesome.com/886c1a5c67.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="profile.css">
 </head>
 <body>
     <header>
-        <img src="C:\Users\gurram keerthana\Desktop\html\images\snapseed-03.jpeg" alt="keerthana profile pig"
+        <img src="snapseed-03.jpeg" alt="keerthana profile pig"
         width="150px" height="150px">
         <div class="i">
         <h1>GURRAM KEERTHANA</h1>
