--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>PROFILE</title>
     <script src="https://kit.fontawesome.com/886c1a5c67.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="https://beginnerwebdesign.github.io/profile/profile.css">
 </head>
 <body>
     <header>
