--- a/profile.html
+++ b/profile.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header>
+        <div class="k">
         <img src="snapseed-03.jpeg" alt="keerthana profile pig"
         width="150px" height="150px">
         <div class="i">
         <h1>GURRAM KEERTHANA</h1>
         <p>Student in vasavi clg of engineering</p>
         </div>
+        </div>    
         <div class="j">
             <table>
                 <tr>
